<resources>
    <string name="app_name">Sécurité Nova</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="iniciar_sesi_n">INICIAR SESIÓN</string>
    <string name="iniciar_ses">INICIAR SESIÓN</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="txt_iniciar_sesion">INICIAR SESIÓN</string>
    <string name="ejemplo_mail_com">ejemplo@mail.com</string>
    <string name="e_mail">E-mail</string>
    <string name="contrase_a">Contraseña</string>
    <string name="recordarme">Recordarme</string>
    <string name="al_menos_8_caracteres">Al menos 8 caracteres</string>
    <string name="no_tienes_una_cuenta">¿No tienes una cuenta?</string>
    <string name="registrate">REGISTRATE</string>
    <string name="olvid_la_contrase_a">¿Olvidó la contraseña?</string>
    <string name="e_mail_registrado">E-mail Registrado</string>
    <string name="recuperar_contrase_a">RECUPERAR CONTRASEÑA</string>
    <string name="home">HOME</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_intento">IntentoActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="reportar">REPORTAR</string>
    <string name="reportar_txt">REPORTAR</string>
    <string name="reportarTIT">REPORTAR</string>
    <string name="reportarLISTO">REPORTAR</string>
    <string name="marcar_esta_ubicaci_n">MARCAR ESTA UBICACIÓN</string>
    <string name="agrega_una_breve_descrioci_n">Agrega una breve descripción</string>
    <string name="elije_una_categor_a">Elije una categoría</string>
    <string name="registrarme">REGISTRARME</string>
    <string name="inicia_sesion">INICIA SESION</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="nombres_y_apellidos">Nombres y apellidos</string>
    <string name="acepto_terminos_y_condiciones">Acepto Terminos y Condiciones</string>
    <string name="ya_tienes_una_cuenta">¿Ya tienes una cuenta?</string>
    <string name="image">image</string>
    <string-array name="lista">
        <item> Hurto a celular </item>
        <item> Poca iluminación </item>
        <item> poca vigilancia </item>
        <item> Accidente </item>
        <item> Sospechosos </item>
        <item> Actividad ilicita </item>
        <item> Armas </item>
        <item> Drogas </item>
        <item> Otro </item>
    </string-array>
</resources>