<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/bg">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:fadingEdge="horizontal|vertical"
        app:cardElevation="1dp"
        app:cardCornerRadius="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#000000"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#8BA3B1"
                android:text="@string/e_mail"
                android:gravity="start"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="25dp"
                android:layout_marginEnd="15dp"
                android:textSize="20sp"/>

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="318dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:gravity="start"
                android:hint="@string/ejemplo_mail_com"
                android:textColorHint="#494949"
                app:boxBackgroundColor="#FFEB3B"
                app:counterTextColor="@color/azulito"
                app:hintTextColor="#494949">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/gmail"
                    android:layout_width="319dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#4D9DB2BE"
                    android:gravity="start"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="#757575"
                    android:textColorLink="@color/azulito" />


            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#8BA3B1"
                android:text="@string/contrase_a"
                android:gravity="start"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="25dp"
                android:layout_marginEnd="15dp"
                android:textSize="20sp"/>

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="318dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:gravity="start"
                android:hint="@string/al_menos_8_caracteres"
                android:textColorHint="#494949"
                app:boxBackgroundColor="#FFEB3B"
                app:counterTextColor="@color/azulito"
                app:hintTextColor="#494949">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="319dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#4D9DB2BE"
                    android:gravity="start"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="#757575"
                    android:textColorLink="@color/azulito" />


            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recordarme"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/iniciar"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#4D9DB2BE"
                android:text="@string/iniciar_ses"
                android:textColor="#8BA3B1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button"
                app:strokeColor="#8BA3B1" />

            <Button
                android:id="@+id/recuperarC"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="#009DB2BE"
                android:gravity="center_horizontal"
                android:onClick="Recuperar"
                android:text="@string/olvid_la_contrase_a"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#8BA3B1"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button"
                app:strokeColor="#8BA3B1" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_tienes_una_cuenta"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/registrate"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:backgroundTint="#009DB2BE"
                android:gravity="center_horizontal"
                android:onClick="Registrate"
                android:text="@string/registrate"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button"
                app:strokeColor="#8BA3B1"
                 />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.core.widget.NestedScrollView>